--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -152,8 +152,7 @@ of ${\overline H}$ is the direct product ofnonabelian simple subgroups and these
 components of ${\overline H}$.  So ${\overline S} \le E({\overline H})$.
 Let ${\overline K}$ be a component of ${\overline H}$.  So $K= K^{(1)}Z$ with
 $K^{(1)}$ quasisimple.  $K \in Comp(G)$ so
-$S \le E(G)Z$ and $S \le E(G)Z$, thus $E(G) \le H$.
-Let $L \in Comp(G)$ and $M= \langle L^H \rangle $
+$S \le E(G)Z$ and $S \le E(G)Z$, thus $E(G) \le H$.  Let $L \in Comp(G)$ and $M= \langle L^H \rangle $
 then ${\overline M}$ is a minimal normal simple subgroup of ${\overline H}$ so
 $M \le S$.  Thus $S=E(G)Z$ so $E(G)=S^{(1)}$.
 \end{quote}
