--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -301,7 +301,7 @@ Let $T$ be the transversal
 $T= \{ Qh_1, Qh_1g, \ldots , Qh_1g^{n_1-1}, Qh_2, Qh_2 g^{n_2-1}, \ldots, Qh_m g^{n_t-1} \}$. 
 $V_{G \rightarrow Q}(g)= \prod_{k=0}^t h_i g_{n_i} h_i^{-1} \jmod{Q'}$.  Since 
 $g^{n_i}, h_i g^{n_i} h_i^{-1} \in Q \subseteq {\mathbb Z}(G)$, 
-$V_{G \rightarrow Q}(g)= g^{\sum_{i=1}^t n_i} = g^{|G:Q|}$. 
+$V_{G \rightarrow Q}(g)= g_{\sum_{i=1}^t n_i} = g^{|G:Q|}$. 
 \end{quote}
 {\bf Theorem 15:}
 If $P \in S_p (G), P'=1$ then $P \cap G' = P \cap N_G(P)'$.
