--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -110,7 +110,7 @@ $[Q,G] \le C_G(P) \le C_G(Q)$ and $[G, Q, Q]=1$ hence $[G,Q]=1$.
 {\bf Application of $P \times Q$:}  Let $P \in p(X)$, $M=O_p(X)$, $Q= O_{p'}(N_X(P))$.  $[P, Q]=1$ so
 $P \times Q$ acts on $M$.  Next, $[C_M(P), Q] = 1$ because $[C_M(P), Q] \subseteq M$ and $[C_M(P), Q] \subseteq Q$, since
 $C_M(P)$ normalizes $P$ so $C_M(P)$ normalizes $Q=O_{p'}(N_X(P))$; as a result, we have,
-$[C_M(P), Q] = M \cap Q = 1$..
+$[C_M(P), Q] = M \cap Q = 1$.
 Let $x \in C_M(P)$ then $[x, Q] = 1$ so $x \in C(Q)$ and $x \in M$ so
 $x \in C_M(Q)$.  Thus $C_M(P) \subseteq C_M(Q)$ and the $P \times Q$ lemma applies, that is, $[M,Q]=1$.
 If $X$ be solvable, we can use this to show $O_{p'}(N_X(P)) \subseteq O_{p'}(X)$, since $C_X(F(X)) \subseteq F(X)$.
