--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -139,7 +139,7 @@ the result holds.  \\
 \emph{Claim:} Under the hypothesis, $\exists P \in S_p(G): P$ is
 $A$-invariant. \\
 \emph{Proof of claim:}  By Frattini, if $P \in S_p(G) \rightarrow AG=GN_{AG}(P)$.
-$\exists A_1 \subset N_{AG}(P): A_1 \cap G=1$ and $A_1 N_{AG}(P)$ so $\exists g \in N_{AG}(P):
+$\exists A_1 \subset N_{AG}(P): A_1 \cap G=1$ and $AG = A_1 N_{AG}(P)$ so $\exists g \in N_{AG}(P):
 A_1^g=A$ so $A \subseteq N_G(P)$.   This proves the claim.
 \\
 \\
