--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -218,7 +218,7 @@ $O_{\pi'}(G/G')$.
 \\
 {\bf Theorem 12:}
 Let $P \in S_p(G)$ and $Z \subseteq {\mathbb Z}(P)$ 
-is weakly closed in $P$.  Suppose $x \in P$ and $g \in G$ such that
+is weakly closed in $P$.  Suppose $y \in P$ and $g \in G$ such that
 $y^g \in P$.  The $\exists n \in N_G(Z): y^g=y^n$.
 \begin{quote}
 \emph{Proof:}  
