--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -399,7 +399,7 @@ Now by Clifford's theorem,
 $\alpha$ can't act without non-trivial fixed-points on $Q$, contrary to the assumption that it does.
 \end{quote}
 \section{Dickson's Theorem}
-{\bf Theorem 2:} (i) $SL_2(q)$ has cyclic groups of order $q-1$ and $q+1$, (ii) $P \in S_2(SL_2(q)$ is
+{\bf Theorem 2:} (i) $SL_2(q)$ has cyclic groups of order $q-1$ and $q+1$, (ii) $P \in S_2(SL_2(q))$ is
 elementary abelian if $q$ is even and generalized quaternion if $q$ is odd.
 \begin{quote}
 \emph{Proof:}
