--- a/groups/gtFrobenius.tex
+++ b/groups/gtFrobenius.tex
@@ -46,7 +46,7 @@ semiregular on $A \setminus \{a\}$ then $G$ is called a \emph{Frobenius group}. 
 $G_a \ne 1$ and $G_{a,b} = 1$.
 \\
 \\
-{\bf Example:} $A_4$ is a Frobenius group with kernel $V_4$. $AL(q)$ is Frobenius:
+{\bf Example:} $A_4$ is a Frobenius group with kernel $V_4$. $SL(q)$ is Frobenius:
 $g = 
 \left(
 \begin{array}{cc}
