--- a/groups/gtStability.tex
+++ b/groups/gtStability.tex
@@ -395,7 +395,7 @@ the existence that act quadratically and non-trivially on $V$.
 $\forall G: O_{\cal K}(G)= \langle A: A \in {\cal K}, A \lhd \lhd G \rangle $.
 \begin{quote}
 \emph{Proof:}  
-Tor $A \lhd G$, this is clear.  May assume $A$ is not normal in $G$ so $\exists N \lhd G$ with
+For $A \lhd G$, this is clear.  May assume $A$ is not normal in $G$ so $\exists N \lhd G$ with
 $A \lhd \lhd N<G$.  By induction, 
 $A \leq O_{\cal K}(N)$.  
 $O_{\cal K}(N) \lhd G$ and  ${\cal K} \in \{N , S , \Pi \}$.  Hence $A \leq O_{\cal K}(N) \leq O_{\cal K}(G)$ which
