--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -287,7 +287,7 @@ $|M \cap M^g |$ for $g \in G-M$.
 {\bf Tightly embedded:} $p=2$. If $M$ is strongly
 embedded, $G$ fixes one point when acting on the cosets of $M$.
 Bender identified all simple groups with strongly 2-embedded subgroups, namely,
-$SL_2(2^n), SZ(2^n), PSU_3(2^n)$.
+$SL_2(2^n), Sz(2^n), PSU_3(2^n)$.
 \\
 \\
 {\bf Definition:}
