--- a/groups/gtSpecific.tex
+++ b/groups/gtSpecific.tex
@@ -1185,7 +1185,51 @@ where $Q$ is a $2$-group and $C_G(t)/Q$ is either (1) $Sp_r(q) \times {\Omega_{2
 \\
 \\
 {\bf Theorem:} Put $G = A_n$ and let $t \in Inv(G)$. $C_{S_n}(t) = H_1 \times H_2$.  $H_1= S_k$, $H_2= S_k \textnormal{ wr } \mathbb{Z}_2$.
-So $C_G(t) = \{ (a, b), a \in H_1, b \in H_2: \textnormal{sign}(a) =  \textnormal{sign}(b) \}$.
+So $C_G(t) = \{ (a, b), a \in H_2, b \in H_2: \textnormal{sign}(a) =  \textnormal{sign}(b) \}$.
+\\
+\\
+{\bf Example special linear group:}
+$G=SL_2(7)$. $|G|=336$.  
+For $g= \left(
+\begin{array}{cc}
+1 & 1\\
+0 & 1\\
+\end{array}
+\right)$, $\langle g \rangle = P \in S_7(G)$.
+For $t= \left(
+\begin{array}{cc}
+2 & 0\\
+0 & 4\\
+\end{array}
+\right)$, $\langle t \rangle = R \in S_3(G)$.  Let $S= S_2(G)$, $|S|=16$.
+$S = \langle a, b \rangle$ where 
+$a= \left(
+\begin{array}{cc}
+1 & 4\\
+2 & 2\\
+\end{array}
+\right)$, and
+$b= \left(
+\begin{array}{cc}
+1 & 3\\
+4 & -1\\
+\end{array}
+\right)$. $|a|=8$ and $|b|=4$.
+$S$ is generalized quaternion and of course, $T \in S_2(PSL_2(7))$ is dihedrael, with
+$|Aut(T)| = 2 \phi(7)$. $T \cong \langle (1234), (13) \rangle$.
+$S$ has $1$ element of order $1$,
+$1$ element of order $2$, $10$ elements of order $4$ and $4$ elements of order $8$.
+$N_G(S) = S$,
+$|N_G(P)| = 42$, and
+$|N_G(R)| = 12$.
+$G$ has $1$ element of order $1$,
+$1$ element of order $2$,
+$56$ elements of order $3$,
+$42$ elements of order $4$,
+$56$ elements of order $6$,
+$48$ elements of order $7$,
+$84$ elements of order $8$, and
+$14$ elements of order $48$.
 \section{Finite Simple Groups}
 ${\mathbb Z}_p$, Schur Multiplier: 1.
 \\
