--- a/groups/gtSpecific.tex
+++ b/groups/gtSpecific.tex
@@ -1229,7 +1229,7 @@ $42$ elements of order $4$,
 $56$ elements of order $6$,
 $48$ elements of order $7$,
 $84$ elements of order $8$, and
-$14$ elements of order $48$.
+$14$ elements of order $48$.  $Aut(Q_8) = S_4$.
 \section{Finite Simple Groups}
 ${\mathbb Z}_p$, Schur Multiplier: 1.
 \\
