--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -17,7 +17,7 @@ case, we say $G$ is a split extension of $N$ by $Q$.
 \end{quote}
 {\bf Extending a group:}
 Suppose $G$ is an extension of $N$ by $H$ and let $\phi: H \rightarrow G/N$.  Pick
-$s:G \rightarrow H$ such that $s(1)=1$ and $\phi(h) = N s(h)$, then 
+$s:H \rightarrow G$ such that $s(1)=1$ and $\phi(h) = N s(h)$, then 
 $\exists f: H \times H \rightarrow N: s(h_1) s(h_2)= f(h_1, h_2) s(h_1 h_2)$
 and $f(h_1, h_2) f(h_1 h_2, h_3)= f(h_2, h_3)^{s(h_1)} f(h_1 , h_2 h_3)$.  Note
 that $\theta_h: n \mapsto s(h) n s(h)^{-1}$ is in $Aut(N)$ and
