--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -726,7 +726,8 @@ Basis Theorem yields $|X/\Phi(X)| \leq 4$ and $q = 3$.
 \end{quote}
 {\bf Definition:} Let $S$ be a  $p$-group.  For $A: A' = 1$, $m(A)$ is the minimal number of generators of $A$.
 $d(P)$ is the maximum value of $m(A)$ for $A \subseteq S$, $A' = 1$. $J(S) = \langle A: m(A) = d(S) \rangle$.
-${\cal H}(G)$ be a set of $p$-groups, $H \subseteq G$: $N_G(H)$ does not have a normal $p$-complement.  Thompson ordering: For $H, K \in G$, define $H \leq \leq K$ iff (a) $|N_G(H)|_p \leq \leq |N_G(K)|_p$, or
+${\cal H}(G)$ be a set of $p$-groups, $H \subseteq G$: $N_G(H)$ does not have a normal $p$-complement.
+\emph{Thompson ordering:} For $H, K \in G$, define $H \leq \leq K$ iff (a) $|N_G(H)|_p < |N_G(K)|_p$, or
 (b) $|N_G(H)|_p = |N_G(K)|_p$ and $H < K$, or
 (c) $H = K$.
 \\
