--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -762,8 +762,8 @@ stability section.
 Let $G$ be a minimal counterexample of minimal order.
 \\
 \\
-1. ${\cal H}(G) \neq \emptyset$. Let $H$ be maximal in the Thompson ordering of ${\cal H}(G)$.  Put $N = N_G(H)$.
-$P \in S_p(N)$ with $H \subseteq P \subseteq S$.
+1. ${\cal H}(G) \neq \emptyset$ by Frobenius. Let $H$ be maximal in the Thompson ordering of ${\cal H}(G)$.
+Put $N = N_G(H)$.  $P \in S_p(N)$ with $H \subseteq P \subseteq S$.
 \\
 \\
 2. $H \neq S$.
