--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -19,7 +19,7 @@ $x \mapsto x^{1 + p^{t-1}}$.
 $G_1 = \langle x^{p} \rangle$ and
 $G_2 = \langle x^{p^{t-1}} \rangle$ so $|G_1| = p^{t-1}$ and $|G_2|=p$. Suppose $\sigma \in Aut(G)$
 of order $p$.
-If $sigma$ centralizes $G/G_1$ or $sigma$ centralizes $G/G_2$, $\sigma = 1$
+If $\sigma$ centralizes $G/G_1$ or $\sigma$ centralizes $G/G_2$, $\sigma = 1$
 \begin{quote}
 \emph{Proof:}
 \end{quote}
