--- a/groups/gtAutomorphism.tex
+++ b/groups/gtAutomorphism.tex
@@ -58,7 +58,7 @@ dihedral, semi-dihedral or quaternion.
 \emph{Proof:}
 If $G$ is not cyclic,
 dihedral, semi-dihedral or quaternion, $\exists D \lhd G$ of type $(p,p)$. $[G,D] < D$ and $[G,[G,D]] = 1$ and
-$ D \subseteq {\mathbb Z}({\mathbb Z}(G))$;
+$ D \subseteq {\mathbb Z}(G/{\mathbb Z}(G))$;
 hence ${\mathbb Z}(G/{\mathbb Z}(G))$ is not cyclic.
 \end{quote}
 {\bf Theorem 7:} Suppose $G$ is a $p$-group and every normal abelian subgroup is cyclic.  Then $G$ is cyclic,
