--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -640,7 +640,7 @@ and $p'$-groups.
 \\
 \\
 {\bf Definition:} $G$ is an $A_p$-group if $\forall S, T \in S_p(G)$, $\exists x \in C(S \cap T)$ such that
-$S^x = T$.  For $X \in p(G)$, define $A(X) = N_G(X)/C_G(X)$.
+$S^x = T$.  For $X \in p(G)$, define $A_G(X) = N_G(X)/C_G(X)$.
 \\
 \\
 {\bf Theorem 45:} If $G$ is a solvable group and $H$ is a minimal normal subgroup then $H$ is elementary abelian.
