--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -190,7 +190,7 @@ $F(G)$ is a $p$-group and $F(G)=O_p(G)$.  Now the result follows since $C_G(F(G)
 {\bf Note:} $G$ acts on $F(G)$ by conjugation so $G/{\mathbb Z}(F(G)) \rightarrow Aut(F(G))$.
 \\
 \\
-{\bf Theorem 12:}  If $G$ is $p$-constrained, $p \in p(G)$ and $P \subseteq G$ then
+{\bf Theorem 12:}  If $G$ is $p$-constrained, $P \in p(G)$ and $P \subseteq G$ then
 (1) $O_{p'}(N_G(P)) \subseteq O_{p'}(G)$ and (2) $N_G(P)$ is $p$-constrained.
 \begin{quote}
 \emph{Proof:}  (1) Let ${\overline G}= G/O_{p'}(G)$, then, as above,
