--- a/science/math2.tex
+++ b/science/math2.tex
@@ -1844,10 +1844,11 @@ $dim(E)=s+k$.
 \emph{Proof:} 
 $f(x_i)= u_i y_i, 1 \leq u \leq s$,
 $f(x_i)= d_i y_i, s+1 \leq u \leq s + k$,
-$f(x_i)= 0, i \geq s+k+1$.  Put $W_i = R \langle y_i + E \rangle$, $s+1 \leq i \leq m$.  $N/E = \sum_i W_i$ and $W_i \cap \sum_{i \ne j} W_j = 0$ so
-the sum is direct.  Each $y_i + E$ has order $d_{i-s}$.
+$f(x_i)= 0, i \geq s+k+1$.  Put $W_i = R \langle y_i + E \rangle$, $s+1 \leq i \leq m$. 
+$N/E = \sum_i W_i$ and $W_i \cap \sum_{i \ne j} W_j = 0$ [Proof: If $r_i y_i = \sum_{j: j \ne i} r_j y_j$ then $d_j \mid r_j, \forall j$,
+thus $r_i y_i \in E$] so the sum is direct.  Each $y_i + E$ has order $d_{i-s}$.
 \end{quote}
-{\bf Theorem G2:} If $R$ is a Euclidean ring (more generally, a pid), and $A=(a_{i,j}$,
+{\bf Theorem G2:} If $R$ is a Euclidean ring (more generally, a pid), and $A=(a_{i,j})$,
 an $m \times n$ matrix over $R$.  The there are matricies $P,Q$ over $R$ such that
 $PAQ= B$ with $B= 
 \left(
