--- a/science/math4.tex
+++ b/science/math4.tex
@@ -494,6 +494,26 @@ a fixed point.
 {\bf Theorem:}
 A finite group of transformations over ${\mathbb R}^3$ has fixed points. $|G|= v_p n_p$,
 $2(|G| -1) = \sum_p (v_p - 1)$.
+\\
+\\
+{\bf Reflections:}  Reflection in the line of slope $m$
+$R_m = 
+\left(
+\begin{array}{cc}
+{\frac {1 - m^2} {1+m^2}} & {\frac {2 m} {1+m^2}} \\
+{\frac {2 m} {1+m^2}} & {\frac {m^2 - 1} {1+m^2}} \\
+\end{array}
+\right)$. \\
+$R_{m_2} R_{m_1} = 
+\left(
+\begin{array}{cc}
+{\frac {(m_1 m_2 +1)^2 - (m_1 - m_2)^2} {(1+{m_1}^2) (1+{m_2}^2)}} & 
+{\frac {2(m_1 - m_2 )(1+ m_1 m_2)} {(1+{m_1}^2) (1+{m_2}^2)}}  \\
+{\frac {2(m_2 - m_1 )(1+ m_1 m_2)} {(1+{m_1}^2) (1+{m_2}^2)}} &
+{\frac {(m_1 m_2 +1)^2 - (m_1 - m_2)^2} {(1+{m_1}^2) (1+{m_2}^2)}} \\
+\end{array}
+\right)$.  A reflection in the line with slope ${\theta_1}$ followed by one of slope ${\theta_2}$ is
+equivalent to a rotation in $2(\theta_1 - theta_2)$.
 \subsection {Real Analysis and Manifolds}
 {\bf Definition:} A metric space, $R$, is a vector space with a distance
 $d: R \times R \rightarrow {\mathbb R}^{\ge 0}$,
