A couple of Galois results

--- a/science/math2.tex
+++ b/science/math2.tex
@@ -2757,6 +2757,23 @@ ${\cal G}({\overline K}/Q_{\overline R})< {\cal G}(K/Q_R)$.
 \begin{quote}
 \emph{Proof:}
 \end{quote}
+{\bf More on Galois groups:} If $E$ is the splitting field over $F$ of $f(x) \in F[x]$, where
+$f$ is an irreducible polynomial of degree $p$, a prime, then $G={\cal G}(K/F)$ contains a $p$-cycle,
+where $G$ is viewed as a group of permutations of the roots of $f$.
+[ Proof:  $p \mid [E:F]$, so $p \mid |G|$  The only element of $S_p$ of order $p$
+is a $p$ cycle.].
+\\
+\\
+Under the assumptions above, if $G$ also contains a transposition, $G=S_p$.
+\\
+\\
+{\bf Theorem:} Let $R$ be a UFD, $(p)$ a prime ideal.  Put ${\overline R} = R/(p)$ and suppose
+$F$ and ${\overline F}$ are the quotient fields of $R$ and ${\overline R}$ respectively.
+Finally, let $f(x)$ be a polynomial over $F$ and ${\overline f}(x)$ be the corresponding
+polynomial over ${\overline F}$.  The Galois group of ${\overline f}$ is a subgroup of the
+Galois group of $f$.
+\\
+\\
 {\bf Definition:}
 A \emph{valuation} is a map $\varphi: K \rightarrow {\mathbb F}^{\ge 0}$ 
 where ${\mathbb F}$ is an
