--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -321,7 +321,7 @@ Now $G/K$ acts faithfully and irreducibly its letting $\lambda$ be the
 $|G|$-th root of unity in the claim, $g \mapsto \Lambda(g)$.  This is an injection into
 a subgroup of a multiplicative subgroup of $F$ and these subgroups are cyclic.
 \end{quote}
-{\bf Corollary:}  If a $G$ possesses a faithful irreducible representation, then
+{\bf Corollary:}  If an abelian group, $G$, possesses a faithful irreducible representation, then
 ${\mathbb Z}(G)$ is cyclic.
 \begin{quote}
 \emph{Proof:}  Simple application of previous theorem.
@@ -332,9 +332,10 @@ abelian $q$-group of $Aut(P)$, $p \ne q$, then $P= \prod_{x \in Q^{\#}} C_P(x)$.
 \emph{Proof:}  Regard $P$ as a vector space over $F_p$.  $Q$ acts on $P$ as a linear transformation
 and denote $\varphi: x \mapsto \phi_x$ be the map between $Q$ and the linear transformations
 under this correspondence.
-By Maschke, $P= P_1 \oplus \ldots \oplus P_n$, each $P_i$ irreducible.  Since
-$Q$ is abelian and let $Q_i= ker(\varphi_{|P_i})$ under the restricted map $\varphi_{|P_i}: Q \rightarrow P_i$.  $Q/Q_i$ must be cyclic and
-$Q$ is non-cyclic so $Q_i \ne 1$.  If $x \in Q_i$ then $P_i \subseteq C_P(x)$.
+By Maschke, $P= P_1 \oplus \ldots \oplus P_n$, each $P_i$ irreducible.
+Let $Q_i= ker(\varphi_{|P_i})$ under the restricted map $\varphi_{|P_i}: Q \rightarrow P_i$.
+$Q/Q_i$ must be cyclic and $Q$ is non-cyclic so
+$Q_i \ne 1$.  If $x \in Q_i$ then $P_i \subseteq C_P(x)$.
 \end{quote}
 {\bf Theorem 21:}
 Let $G$ be a $p$-group and
