stuff on strong embedding

--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -247,6 +247,14 @@ Note that $Q_8 \in S_2(SL_2(3))$ and $\left(
 \begin{quote}
 \end{quote}
 \section {Strongly Embedded Groups}
+{\bf Definition:}  $H$ is \emph{strongly-embedded} in $X$ if $N_X(T) \subseteq H$ if $T \in 2(X)$.
+\\
+\\
+{bf Lemma:} If $H$ is \emph{strongly-embedded} in $X$ then (a) $S \in S_2(H)$ then $S \in S_2(X)$, (b)
+$x \in x - H$ then $|H \cap H^g|$ is odd and (c) In the permutation representation of $X$ on $\{H^g\}$,
+the 1-point stabilizer of a point has even order and the $2$-point stabilizer has odd order.
+\\
+\\
 {\bf Definition:}  $M$ is \emph{strongly-embedded} if
 $|M|_2 > 1$ and $|M \cap M^g|_2=1, \forall g \in G \setminus M$.
 \\
@@ -306,7 +314,7 @@ If $G$ is a finite simple group and
 $H<G$ with ${\mathbb Z}(H)$ of even order and $h \approx C_H(z)$ then $G$ is said
 to be of $H$-type.  Note we can construct a faithful transitive permutation representation
 of $G$ given a presentation of $H$.  A group has an $H$-satellite if there are non-isomorphic
-groups of $h$-type.
+groups of $H$-type.
 \\
 \\
 {\bf Definition:}
