--- a/groups/gtFSGMotivation.tex
+++ b/groups/gtFSGMotivation.tex
@@ -84,7 +84,8 @@ are of characteristic $2$-type.
 \\
 {\bf Plan:} First we try to show the centralizer of an involution in $G$ is in standard form (i.e- is a Lie group of odd
 characteristic or $A_{2k+1}$).  If not, $G$ is of characteristic $2$-type.  If $G$ is not of characteristic $2$-type, $G$
-has an involution, $x$ and $C(x)/O(C(x))$ has a component.  This is a group of \emph{component} type.
+has an involution, $x$ and $C(x)/O(C(x))$ has a component.  This is a group of \emph{component} type.  Note that if
+$G$ is not of component type, $G$ is $2$ constrained.
 \\
 \\
 {\bf Applying signalizers:}  What are the components of $C(a)/O(C(a))$, $a \in A^{\#}$.  Either $\theta(a)=O(C(a))$ is
