A little more on strong embedding

--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -255,6 +255,14 @@ $x \in x - H$ then $|H \cap H^g|$ is odd and (c) In the permutation representati
 the 1-point stabilizer of a point has even order and the $2$-point stabilizer has odd order.
 \\
 \\
+{\bf Observation:}  Induction on SE groups uses the following:
+\emph{Lemma 1:} If $H$ is strongly embedded in $X$ and $Y \leq H$ and $|Y \cap H|$ and $|Y \cap H^g|$ for
+some $g \in G - H$, then $Y \cap H$ is strongly embedded in $Y$.
+\\
+\emph{Lemma 2:} If $Y \leq H$ lies in at least three distinct conjugates of $H$, $|C_H(Y)|$ is odd and
+acts transitively on conjugates of $H$.
+\\
+\\
 {\bf Definition:}  $M$ is \emph{strongly-embedded} if
 $|M|_2 > 1$ and $|M \cap M^g|_2=1, \forall g \in G \setminus M$.
 \\
