Fixed semidirect product

--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -6,13 +6,13 @@ there is a surjective homomorphism $\pi:G \rightarrow Q$.
 \\
 \\
 {\bf Definition 1:}
-Let $\pi: A \rightarrow Aut(K)$, $K \lhd G$, $H<G$ and $H \cap K = 1$ define the
-\emph {semi-direct} product of $K$ by $H$ as the group who's elements
-are $(a,b) \in H \times K$ with the product $(a, g) \cdot (b,h)= (ab, \pi(b)(g)h)$.
+Let $\pi: H \rightarrow Aut(K)$, $K \lhd G$, $H<G$ and $H \cap K = 1$ define the
+\emph {semidirect} product of $K$ by $H$ (denoted $H \ltimes K$) as the group with elements
+$(a, g) \in H \times K$ with the product $(a, g) \cdot (b, h)= (ab, \pi(b)(g)h)$ [or $(ab, (g)^{\pi(b)}h)$].
 \\
 \\
-{\bf Definition 2:} An extension $G$ of $K$ by $H$ \emph {splits} if G
-is a semi-direct product of $H$ and $K$.
+{\bf Definition 2:} An extension $G$ of $K$ by $H$ (i.e.: $1 \rightarrow K \rightarrow G \rightarrow H \rightarrow 1$) 
+\emph {splits} if G is a semidirect product of $H$ and $K$.
 \\
 \\
 {\bf Theorem 1:}
@@ -20,7 +20,7 @@ If $1 \rightarrow N \rightarrow_{i} G \rightarrow_{\varphi} Q \rightarrow 1$, th
 are equivalent
 (1) $\exists H \subseteq G$ such that $\varphi: H \rightarrow Q$ is an isomorphism;
 (2) $\exists s:Q \rightarrow G$ such that $\varphi \cdot s = id$;
-(3) $G$ is a semi-direct product of $N$ by $H$ written $N \ltimes Q$; in this
+(3) $G$ is a semidirect product of $N$ by $H$ written $Q \ltimes N$; in this
 case, we say $G$ is a split extension of $N$ by $H$.
 \begin{quote}
 \emph{Proof:}
